--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
   },
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
+    "space-before-function-paren": "off",
     "comma-dangle": "off",
     "@typescript-eslint/comma-dangle": "off",
     "semi": [2, "always"],
