--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "graphql": "^16.3.0",
     "graphql-request": "^4.2.0",
     "i": "^0.3.7",
-    "next": "12.1.0",
+    "next": "^12.1.6",
     "npm": "^8.6.0",
-    "react": "17.0.2",
+    "react": "^18.1.0",
     "react-copy-to-clipboard": "^5.0.4",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.1.0",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-query": "^3.34.19",
@@ -33,9 +33,9 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
     "@types/node": "17.0.23",
-    "@types/react": "17.0.2",
+    "@types/react": "^18.0.9",
     "@types/react-copy-to-clipboard": "^5.0.2",
-    "@types/react-dom": "17.0.2",
+    "@types/react-dom": "^18.0.5",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
