--- a/hardhat/tsconfig.json
+++ b/hardhat/tsconfig.json
@@ -1,13 +1,10 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "target": "es2018",
+    "target": "es2020",
     "module": "commonjs",
-    "strict": true,
     "esModuleInterop": true,
-    "outDir": "dist",
-    "declaration": true
-  },
-  "include": ["./scripts", "./test", "./typechain"],
-  "files": ["./hardhat.config.ts"]
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true
+  }
 }
