--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@3rdweb/hooks": "^1.9.2",
     "@apollo/client": "^3.5.10",
+    "@openzeppelin/contracts-upgradeable": "^4.6.0",
     "axios": "^0.27.2",
     "ethers": "^5.6.2",
     "framer-motion": "^6.2.10",
