--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "graphql": "^16.3.0",
     "graphql-request": "^4.2.0",
     "i": "^0.3.7",
+    "ipx": "^0.9.10",
     "next": "^12.1.6",
     "npm": "^8.6.0",
     "react": "^18.1.0",
@@ -32,6 +33,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@netlify/ipx": "^1.1.3",
     "@tailwindcss/typography": "^0.5.2",
     "@types/node": "17.0.23",
     "@types/react": "^18.0.9",
@@ -48,6 +50,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react": "^7.29.4",
+    "netlify-plugin-ipx": "^0.0.1",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23",
     "typescript": "4.6.2"
