--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@netlify/ipx": "^1.1.3",
+    "@netlify/plugin-nextjs": "^4.13.1",
     "@tailwindcss/typography": "^0.5.2",
     "@types/node": "17.0.23",
     "@types/react": "^18.0.9",
